@@ -33,7 +33,7 @@
 .if !'\\$1'0' .sp
 ..
 .\" ---------------------------------------------------------------------------
-.TH \f3cdecl\fP 1 "February 6, 2021" "PJL TOOLS"
+.TH \f3cdecl\fP 1 "February 24, 2021" "PJL TOOLS"
 .SH NAME
 cdecl, c++decl \- compose and decipher C & C++ declarations and casts
 .SH SYNOPSIS
@@ -1068,12 +1068,15 @@ The words on the left are synonyms for what's on the right:
              accum  _Accum
             atomic  _Atomic
          automatic  auto
-             _Bool  bool
+              bool  _Bool
 carries-dependency  carries_dependency
          character  char
            command  commands
            complex  _Complex
           constant  const
+              conv  conversion
+              ctor  constructor
+              dtor  destructor
        enumeration  enum
           exported  export
           external  extern
@@ -1107,7 +1110,7 @@ non-unique-address  no_unique_address
          structure  struct
               type  typedef
       thread-local  thread_local
-     _Thread_local  thread_local
+      thread_local  _Thread_local
           user-def  user-defined
                var  variable
            varargs  ...
