@@ -253,12 +253,15 @@ static cdecl_keyword_t const CDECL_KEYWORDS[] = {
                         { { LANG_C_KNR, L_GNU___CONST },
                           { LANG_ANY,   L_CONST       } } ) },
   { L_CONSTRUCTOR,    TOKEN( Y_CONSTRUCTOR                ) },
+  { L_CONV,           TOKEN( Y_CONVERSION                 ) },
   { L_CONVERSION,     TOKEN( Y_CONVERSION                 ) },
+  { L_CTOR,           TOKEN( Y_CONSTRUCTOR                ) },
   { L_DECLARE,        TOKEN( Y_DECLARE                    ) },
   { L_DEFAULTED,      C_SY1( false, L_DEFAULT             ) },
   { L_DEFINE,         TOKEN( Y_DEFINE                     ) },
   { L_DELETED,        C_SY1( false, L_DELETE              ) },
   { L_DESTRUCTOR,     TOKEN( Y_DESTRUCTOR                 ) },
+  { L_DTOR,           TOKEN( Y_DESTRUCTOR                 ) },
   { L_DYNAMIC,        TOKEN( Y_DYNAMIC                    ) },
   { L_ENGLISH,        TOKEN( Y_ENGLISH                    ) },
   { L_ENUMERATION,    C_SY1( false, L_ENUM                ) },
