@@ -160,9 +160,12 @@ char const L_CATCH[]              = "catch";
 char const L_CLASS[]              = "class";
 char const L_CONSTRUCTOR[]        = "constructor";
 char const L_CONST_CAST[]         = "const_cast";
+char const L_CONV[]               = "conv";
 char const L_CONVERSION[]         = "conversion";
+char const L_CTOR[]               = "ctor";
 char const L_DELETE[]             = "delete";
 char const L_DESTRUCTOR[]         = "destructor";
+char const L_DTOR[]               = "dtor";
 char const L_DYNAMIC[]            = "dynamic";
 char const L_DYNAMIC_CAST[]       = "dynamic_cast";
 char const L_EXPLICIT[]           = "explicit";
